test/valid/OverridenInSuperSuper/Super.plume
class Super extends SuperSuper is