test/invalid/41625_AbstractMethods/ConcreteObject.plume
class ConcreteObject extends AbstractObject is